had to pull files from fork due to outdated files not working with current dependencies. Added 404 error to non-existing recipe id